fix: navbar set to first baseline alignment

--- a/source-folio/src/Components/CssFiles/navbar.css
+++ b/source-folio/src/Components/CssFiles/navbar.css
@@ -32,7 +32,7 @@
 .nav__list{
     display:flex;
     column-gap:2rem;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 
 .nav__link{
